--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,50 +7,32 @@
       "jsx": true
     }
   },
-  "ignorePatterns": [
-    "~icons/**/*.jsx"
-  ],
-  "extends": [
-    "plugin:prettier/recommended",
-    "plugin:react-hooks/recommended",
-    "plugin:import/warnings"
-  ],
-  "plugins": [
-    "simple-import-sort",
-    "import"
-  ],
+  "ignorePatterns": ["~icons/**/*.jsx"],
+  "extends": ["plugin:prettier/recommended", "plugin:react-hooks/recommended", "plugin:import/warnings"],
+  "plugins": ["simple-import-sort", "import"],
   "rules": {
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "error",
     // suppress errors for missing 'import React' in files
     "react/react-in-jsx-scope": "off",
+
     "@typescript-eslint/explicit-module-boundary-types": 0,
-    "semi": [
-      0,
-      "always"
-    ],
+    "semi": [0, "always"],
     "simple-import-sort/imports": [
       "error",
       {
-        "groups": [
-          [
-            "^@?\\w"
-          ],
-          [
-            "^"
-          ],
-          [
-            "^\\."
-          ],
-          [
-            "^\\u0000"
-          ]
-        ]
+        "groups": [["^@?\\w"], ["^"], ["^\\."], ["^\\u0000"]]
       }
     ],
     "simple-import-sort/exports": "error",
     "import/first": "error",
     "import/newline-after-import": "error",
-    "import/no-duplicates": "error"
+    "import/no-duplicates": "error",
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ]
   }
 }
