--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vite-wagmi-starter",
+  "name": "vite-starter",
   "version": "0.0.0",
-  "description": "vite wagmi starter",
+  "description": "vite starter",
   "main": "index.js",
   "scripts": {
     "dev": "vite",
@@ -9,28 +9,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@did-network/dapp-sdk": "^0.1.9",
-    "@radix-ui/react-dialog": "^1.0.4",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-select": "^1.2.2",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-toast": "^1.1.4",
     "@tanstack/react-query": "^5.17.7",
-    "@unocss/reset": "^0.59.4",
+    "ahooks": "^3.7.11",
     "axios": "^1.2.6",
-    "buffer": "^6.0.3",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
     "jotai": "^2.7.2",
     "lucide-react": "^0.244.0",
-    "node-stdlib-browser": "^1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.8.0",
     "react-router-dom": "^6.8.0",
-    "tailwind-merge": "^1.13.2",
-    "viem": "^2.9.6",
-    "wagmi": "^2.5.17"
+    "tailwind-merge": "^1.13.2"
   },
   "devDependencies": {
     "@iconify-json/carbon": "^1.1.14",
@@ -43,6 +36,7 @@
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^6.18.0",
     "@typescript-eslint/parser": "^6.18.0",
+    "@unocss/reset": "^0.59.4",
     "@unocss/transformer-variant-group": "^0.59.4",
     "@vitejs/plugin-legacy": "^5.3.2",
     "@vitejs/plugin-react": "4.2.1",
@@ -53,7 +47,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "pkg-exports": "^0.1.2",
+    "node-stdlib-browser": "^1.2.0",
     "prettier": "2.8.3",
     "rollup-plugin-visualizer": "^5.9.0",
     "typescript": "^5.3.3",
@@ -64,23 +58,13 @@
     "unplugin-icons": "^0.15.2",
     "vite": "5.2.8",
     "vite-plugin-checker": "^0.6.4",
+    "vite-plugin-chunk-split": "^0.5.0",
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-node-stdlib-browser": "^0.2.1",
     "vite-plugin-pages": "^0.32.1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/fisand/vite-wagmi-seed.git"
-  },
   "keywords": [
     "vite",
-    "wagmi",
     "unocss"
-  ],
-  "author": "zouhang",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/fisand/vite-wagmi-seed/issues"
-  },
-  "homepage": "https://github.com/fisand/vite-wagmi-seed#readme"
+  ]
 }
