--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
@@ -21,9 +22,11 @@
     "lucide-react": "^0.244.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.13",
     "react-router": "^6.8.0",
     "react-router-dom": "^6.8.0",
-    "tailwind-merge": "^1.13.2"
+    "tailwind-merge": "^1.13.2",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@iconify-json/carbon": "^1.1.14",
@@ -60,8 +63,7 @@
     "vite-plugin-checker": "^0.6.4",
     "vite-plugin-chunk-split": "^0.5.0",
     "vite-plugin-eslint": "^1.8.1",
-    "vite-plugin-node-stdlib-browser": "^0.2.1",
-    "vite-plugin-pages": "^0.32.1"
+    "vite-plugin-node-stdlib-browser": "^0.2.1"
   },
   "keywords": [
     "vite",
