feat: update config

--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,7 @@
     }
   },
   "ignorePatterns": ["~icons/**/*.jsx"],
-  "extends": ["plugin:prettier/recommended", "plugin:react-hooks/recommended", "plugin:import/warnings"],
+  "extends": ["plugin:react-hooks/recommended", "plugin:import/warnings", "plugin:prettier/recommended"],
   "plugins": ["simple-import-sort", "import"],
   "rules": {
     "react-hooks/rules-of-hooks": "error",
