--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.0.0",
   "description": "vite starter",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint:eslint": "eslint --fix --ext .js,.jsx,.ts,.tsx",
-    "lint:format": "prettier --cache --write ."
+    "prepare": "husky install"
   },
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
@@ -17,21 +17,23 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.17.7",
-    "ahooks": "^3.7.11",
     "axios": "^1.2.6",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
-    "jotai": "^2.7.2",
     "lucide-react": "^0.244.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.13",
     "react-router": "^6.8.0",
     "react-router-dom": "^6.8.0",
+    "react-use": "^17.5.0",
+    "styled-components": "^6.1.11",
     "tailwind-merge": "^1.13.2",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.7.2",
+    "@commitlint/config-conventional": "^17.7.0",
     "@iconify-json/carbon": "^1.1.14",
     "@iconify-json/line-md": "^1.1.24",
     "@iconify-json/logos": "^1.1.25",
@@ -53,9 +55,16 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
     "node-stdlib-browser": "^1.2.0",
     "prettier": "2.8.3",
     "rollup-plugin-visualizer": "^5.9.0",
+    "stylelint": "^15.10.3",
+    "stylelint-config-rational-order": "^0.1.2",
+    "stylelint-config-standard": "^33.0.0",
+    "stylelint-declaration-block-no-ignored-properties": "^2.7.0",
+    "stylelint-order": "^6.0.3",
     "typescript": "^5.3.3",
     "unocss": "0.59.4",
     "unocss-preset-animations": "1.0.1",
