--- a/.eslintrc
+++ b/.eslintrc
@@ -8,14 +8,17 @@
     }
   },
   "ignorePatterns": ["~icons/**/*.jsx"],
-  "extends": ["plugin:react-hooks/recommended", "plugin:import/warnings", "plugin:prettier/recommended"],
+  "extends": [
+    "plugin:prettier/recommended",
+    "plugin:react-hooks/recommended",
+    "plugin:import/warnings"
+  ],
   "plugins": ["simple-import-sort", "import"],
   "rules": {
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "error",
     // suppress errors for missing 'import React' in files
     "react/react-in-jsx-scope": "off",
-
     "@typescript-eslint/explicit-module-boundary-types": 0,
     "semi": [0, "always"],
     "simple-import-sort/imports": [
