--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,8 +1,5 @@
 {
-  "extends": [
-    "stylelint-config-standard",
-    "stylelint-config-rational-order"
-  ],
+  "extends": ["stylelint-config-standard", "stylelint-config-rational-order"],
   "plugins": ["stylelint-order"],
   "rules": {
     "indentation": 2,
