--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "lint:eslint": "eslint --fix --ext .js,.jsx,.ts,.tsx",
+    "lint:format": "prettier --cache --write ."
   },
   "dependencies": {
-    "@faker-js/faker": "^8.4.1",
     "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
@@ -34,16 +35,18 @@
   "devDependencies": {
     "@commitlint/cli": "^17.7.2",
     "@commitlint/config-conventional": "^17.7.0",
+    "@faker-js/faker": "^8.4.1",
     "@iconify-json/carbon": "^1.1.14",
     "@iconify-json/line-md": "^1.1.24",
     "@iconify-json/logos": "^1.1.25",
     "@iconify-json/lucide": "^1.1.83",
     "@svgr/core": "^6.5.1",
-    "@types/node": "^18.15.11",
+    "@types/node": "^18.19.33",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^6.18.0",
     "@typescript-eslint/parser": "^6.18.0",
+    "@unocss/preset-attributify": "^0.60.2",
     "@unocss/reset": "^0.59.4",
     "@unocss/transformer-variant-group": "^0.59.4",
     "@vitejs/plugin-legacy": "^5.3.2",
@@ -57,6 +60,7 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
+    "msw": "^2.3.0",
     "node-stdlib-browser": "^1.2.0",
     "prettier": "2.8.3",
     "rollup-plugin-visualizer": "^5.9.0",
@@ -80,5 +84,8 @@
   "keywords": [
     "vite",
     "unocss"
-  ]
+  ],
+  "msw": {
+    "workerDirectory": "./public"
+  }
 }
